	(IS_SLASH, FILESYSTEM_PREFIX_LEN): Depend on HAVE_DOS_FILE_NAMES,
	not O_BINARY.
	(CHAR_BIT): New macro.

	* src/dosbuf.c (struct dos_map):
	pos and add members are now of type off_t.
	(dos_stripped_crs): Now of type off_t.
	(dossified_pos): Now accepts arg and returns value of type off_t.

	* configure.in (AC_CHECK_FUNCS): Add setmode.
	(HAVE_DOS_FILENAMES): New macro

1998-11-24  Jim Meyering

	* src/grep.c : Typo s/infalid/invalid/
	Also noted by Stanislav Brabec.

1998-11-24  Eli Zaretskii 

	* doc/grep.texi: I found and corrected several typos.
	I believe the GNU standards require the section that describes the
	options to the programs to be called ``Invoking'' or ``Invoking
	<program-name>''.  This is so users and programs can easily find
	that node in any Info file.  So I changed the name of the
	`Options' chapter to `Invoking', and corrected the
	cross-references accordingly.
	I added some markup to things like file names and options.
	I added some additional index entries where that seemed useful.
	I also corrected some index entries, such as "@cindex [:alnum:]",
	which used a colon in them (the colons confuse Info readers).

1998-11-24  Alain Magloire

	* grep/doc/grep.texi : -h is not use for help.
	Nit spotted by Jim Meyering.

1998-11-23  Alain Magloire

	* doc: New directory, grep.1, {e,f}grep.man move here
	* doc/grep.texi: New info manual
	* doc/version.texi: New 
	* doc/Makefile.am: New 
	* tests/{ere,bre}.*: New files. The spencer2 test is split
	in two ere/bre.
	* config.hin: New, config.h.in rename to config.hin for OS
	with limited file system aka DOS.

	* grep-2.2d release for beta.

1998-11-18  Alain Magloire

	* src/regex.[ch] : Updated from GLibc, previous patches were
	integrate by Ulrich Drepper and some added ones.

1998-11-16  Paul Eggert

	* grep.h (__attribute__): New macro, if not GCC.
	(fatal): Add __attribute__((noreturn)).
	* grep.c (usage): Add __attribute__((noreturn)).

1998-11-16  Paul Eggert
