@@ -2,18 +2,6 @@
 AUTOMAKE_OPTIONS = no-dependencies
 
 ACLOCAL_AMFLAGS = --acdir=m4
-SUBDIRS = intl po doc src tests
+SUBDIRS = intl po doc src tests djgpp m4 vms
 
-EXTRA_DIST = TODO README \
-             vms/make.com vms/README \
-             djgpp/config.bat djgpp/config.site \
-             djgpp/getconf djgpp/README \
-             m4/gettext.m4 \
-             m4/header.m4 \
-             m4/init.m4 \
-             m4/install.m4 \
-             m4/lcmessage.m4 \
-             m4/lfs.m4 \
-             m4/missing.m4 \
-             m4/progtest.m4 \
-             m4/sanity.m4
+EXTRA_DIST = TODO README PATCHES-AC
